Commit by @naszam

--- a/article.tex
+++ b/article.tex
@@ -18,14 +18,14 @@
 
 \begin{document}
 %
-\title{Ants-Review: an Ethereum-Based Protocol for Peer Reviews}
+\title{Ants-Review: an Ethereum-Based Privacy-oriented Protocol for Incentiviced Open Peer Reviews}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
 \author{Bianca Trovò\inst{1}\orcidID{0000-0002-6776-2304}\thanks{Corresponding author}\and
-Nazzareno Massari\inst{2}\orcidID{0000-0002-6638-2174}\thanks{Corresponding author}}
+Nazzareno Massari\inst{2}\orcidID{0000-0002-6638-2174}\thanks{These authors equally contributed to this work.}}
 %
 \authorrunning{B. Trovò et N. Massari}
 % First names are abbreviated in the running head.
@@ -33,7 +33,7 @@ Nazzareno Massari\inst{2}\orcidID{0000-0002-6638-2174}\thanks{Corresponding auth
 %
 \institute{Sorbonne Université, Faculté des Sciences et Ingénierie, Paris, France
 \email{bianca.trovo@alumni.unitn.it}\\
-\and Smart Contract Engineer, London, United Kingdom \\
+\and MakerDAO, Community Development, London, United Kingdom \\
 \email{nazzareno@nazzarenomassari.com}}
 %
 \maketitle              % typeset the header of the contribution
