--- a/article.tex
+++ b/article.tex
@@ -18,7 +18,7 @@
 
 \begin{document}
 %
-\title{Ants-Review: an Ethereum-Based Privacy-oriented Protocol for Incentivized Open Peer Reviews}
+\title{Ants-Review: an Ethereum-Based Privacy-Oriented Protocol for Incentivized Open Peer Reviews}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
@@ -148,7 +148,7 @@ In this paper we addressed a crucial problem within scholarly academic communica
 Source code, DOI: 10.5281/zenodo.3971044; DApp: https://ants-review.on.fleek.co.
 
 \subsubsection{Declaration of Competing Interest}
-This work was developed during the ETHTurin Hackathon 2020 and the Kernel Fellowship program 2020. These organizations had no financial role in the design and implementation of this protocol.
+This work was mainly developed during the ETHTurin Hackathon 2020 and the Gitcoin Kernel Fellowship program 2020. These organizations, as well as the authors' affiliations, had no financial role in the design and implementation of the protocol.
 
 \subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi, Andy Tudhope, Mark Beylin, Evan C. Harris and the four external anonymous peer reviewers for useful comments and revisions; Mitrasish Mukherjee for contributions on the interface.}
 
