Prova: update affiliations but the title is suppressed because it's too long

--- a/article.tex
+++ b/article.tex
@@ -24,16 +24,18 @@
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
-\author{Bianca Trovò\inst{1}\orcidID{0000-0002-6776-2304}\thanks{Corresponding author}\and
-Nazzareno Massari\inst{2}\orcidID{0000-0002-6638-2174}\thanks{The two authors contributed equally to this work}}
+\author{Bianca Trovò\inst{1,2}\orcidID{0000-0002-6776-2304}\thanks{Corresponding author}\and
+Nazzareno Massari\inst{3,4}\orcidID{0000-0002-6638-2174}\thanks{The two authors contributed equally to this work}}
 %
 \authorrunning{B. Trovò et N. Massari}
 % First names are abbreviated in the running head.
 % If there are more than two authors, 'et al.' is used.
 %
-\institute{Sorbonne Université, Faculté des Sciences et Ingénierie, Paris, France
+\institute{Sorbonne Université, Faculté des Sciences et Ingénierie, Paris, France \and
+Atomic Energy and Alternative Energies Commission (CEA), Frédéric Joliot Institute for Life Sciences, NeuroSpin, UNICOG, INSERM U992, Paris-Saclay, France
 \email{bianca.trovo@alumni.unitn.it}\\
-\and MakerDAO, Community Development, London, United Kingdom \\
+\and MakerDAO, Community Development, London, United Kingdom \and
+WFIL Labs\\
 \email{nazzareno@nazzarenomassari.com}}
 %
 \maketitle              % typeset the header of the contribution
@@ -46,7 +48,7 @@ Peer-review is a necessary and essential quality control step for scientific pub
 %
 \section{Introduction}
 Since the birth of Bitcoin \cite{BitcoinSatoshi} in 2008 as a peer-to-peer electronic cash system, blockchain technologies have spread far beyond the sole cryptocurrency domain, in particular after the implementation of general purpose smart contracts introduced by Ethereum \cite{Ethereum-Wood}.
-Besides a growing number of applications ranging from De-Fi, healthcare, music industry, government, identity, to cite but a few, blockchain technology has recently started to catalyse the attention of the scientific community as well \cite{Bitcoin-Nature-focus,vanRossum2017-DigSci} with the promising potential of being a `game changer' in outdated and broken scientific practices and leading towards open science \cite{AES}. Indeed, scholars have pointed out how the intrinsic characteristics of blockchain technology set the basis for a open science infrastructure \cite{ReviewBlockchain2019} in which decisional processes are transparent and therefore more democratically accessible to all the stakeholders (researchers, reviewers, funders, taxpayers). Those are: the consensus algorithm \cite{ConsAlg}, a deterministic computational trust that allows for \emph{decentralization}, for which there are no trusted third parties; the proof of existence (PoE) that via \emph{cryptographic hashing} and \emph{timestamping} creates a digital footprint able to keep a traceable chronological record of research objects that cannot be altered or retrieved (due to its property of \emph{immutability} or \emph{append-only})\cite{ReviewBlockchain2019}. In particular, a `blockchainified science'\cite{BlockchainforScience} could `reduce waste'\cite{ReducingWaste-Lancet}, by disclosing each step in the research cycle to `scientific self-correction' way before the final publication step, and therefore help fixing the current reproducibility crisis in science.
+Besides a growing number of applications ranging from De-Fi, healthcare, music industry, government, identity, to cite but a few, blockchain technology has recently started to catalyse the attention of the scientific community as well \cite{Bitcoin-Nature-focus,vanRossum2017-DigSci} with the promising potential of being a `game changer' in outdated and broken scientific practices and leading towards open science \cite{AES}. Indeed, scholars have pointed out how the intrinsic characteristics of blockchain technology set the basis for a open science infrastructure \cite{ReviewBlockchain2019} in which decisional processes are transparent and therefore more democratically accessible to all the stakeholders (researchers, reviewers, funders, taxpayers). Those are: the consensus algorithm \cite{ConsAlg}, a deterministic computational trust that allows for \emph{decentralization}, for which there are no trusted third parties; the proof of existence (PoE) that via \emph{cryptographic hashing} and \emph{timestamping} creates a digital footprint able to keep a traceable chronological record of research objects that cannot be altered or retrieved (due to its property of \emph{immutability} or \emph{append-only}) \cite{ReviewBlockchain2019}. In particular, a `blockchainified science' \cite{BlockchainforScience} could `reduce waste' \cite{ReducingWaste-Lancet}, by disclosing each step in the research cycle to `scientific self-correction' way before the final publication step, and therefore help fixing the current reproducibility crisis in science.
 \newline A thorny issue in the academic system that can - and we think it should - be tackled by blockchain concerns the status and accreditation of peer review, the core process of scientific validation currently facing a crisis \cite{Gropp-PeerRevStress}.
 In this paper we propose a solution to the problem of reviewers recognition based on the principles of tokenomics \cite{TokenEcon} and in line with the values of open science.
 
@@ -71,7 +73,7 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on E
 
 \subsubsection{Incentivization and recognition.} A popular incentive model for open source software (OSS) is represented by bounties. Bounties are prizes or monetary rewards given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[2]{\emph{Gitcoin}. https://gitcoin.co} and \emph{The Bounties Network}\footnote[3]{\emph{The Bounties Network}. https://bounties.network}. Incentives can be represented by tokens, units of values registered on the blockchain. In the network of the scientific community reviewers provide a service and those who consume it (authors, journals) should be able to contribute with tokens. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher. Thus, the system acts also as a reputation builder.
 
-\subsubsection{Transparency and re-usability of the records.} The peer review history, including reviewers' recommendations and authors' replies, should be openly and permanently accessible to the community (in the form of `open reports' of open peer reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[4]{\emph{Neuroscience Peer Review Consortium}. http://nprc.incf.org} and independent companies like \emph{ResearchSquare} \footnote[5]{\emph{ResearchSquare}. https://www.researchsquare.com} and \emph{Peerage of Science} \footnote[6]{\emph{Peerage of Science}.  https://www.peerageofscience.org}, that provide a scientific peer review service, peer reviews in Ants-Review will be transferable across journals (like in `cascading' or `portable peer reviews').
+\subsubsection{Transparency and re-usability of the records.} The peer review history, including reviewers' recommendations and authors' replies, should be openly and permanently accessible to the community (in the form of `open reports' of open peer reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[4]{\emph{Neuroscience Peer Review Consortium}. http://nprc.incf.org} and independent companies like \emph{ResearchSquare}\footnote[5]{\emph{ResearchSquare}. https://www.researchsquare.com} and \emph{Peerage of Science}\footnote[6]{\emph{Peerage of Science}.  https://www.peerageofscience.org}, that provide a scientific peer review service, peer reviews in Ants-Review will be transferable across journals (like in `cascading' or `portable peer reviews').
 
 \subsubsection{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflicts of interest, it is important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data immutability and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remains unaltered and indelible. This notarization process is called proof of existence (PoE) and allows manual verification of the existence of the document.
 \newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s externally owned accounts (EOA) addresses and zero-knowledge proof (ZKP), a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see 3.2).
@@ -145,7 +147,7 @@ In this paper we addressed a crucial problem within scholarly academic communica
 
 
 \subsubsection{Supplementary Material}
-Source code, DOI: 10.5281/zenodo.3971044; DApp: https://ants-review.on.fleek.co.
+Source code, DOI: 10.5281/zenodo.3971044;DApp: https://ants-review.on.fleek.co.
 
 \subsubsection{Declaration of Competing Interest}
 This work was mainly developed during the ETHTurin Hackathon 2020 and the Gitcoin Kernel Fellowship program 2020. These organizations, as well as the authors' affiliations, had no financial role in the design and implementation of the protocol.
