--- a/article.tex
+++ b/article.tex
@@ -18,7 +18,7 @@
 
 \begin{document}
 %
-\title{Ants-Review: an Ethereum-Based Privacy-Oriented Protocol for Incentivized Open Peer Reviews}
+\title{Ants-Review: an Ethereum-Based Protocol for Incentivized Peer Reviews}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
@@ -32,10 +32,9 @@ Nazzareno Massari\inst{3,4}\orcidID{0000-0002-6638-2174}\thanks{The two authors 
 % If there are more than two authors, 'et al.' is used.
 %
 \institute{Sorbonne Université, Faculté des Sciences et Ingénierie, Paris, France \and
-Atomic Energy and Alternative Energies Commission (CEA), Frédéric Joliot Institute for Life Sciences, NeuroSpin, UNICOG, INSERM U992, Paris-Saclay, France
+Atomic Energy and Alternative Energies Commission (CEA), Frédéric Joliot Institute for Life Sciences, NeuroSpin, Cognitive Neuroimaging Unit, Saclay, France
 \email{bianca.trovo@alumni.unitn.it}\\
-\and MakerDAO, Community Development, London, United Kingdom \and
-WFIL Labs\\
+\and MakerDAO, Community Development, London, United Kingdom \\
 \email{nazzareno@nazzarenomassari.com}}
 %
 \maketitle              % typeset the header of the contribution
