Changes for Springer

--- a/article.tex
+++ b/article.tex
@@ -18,7 +18,7 @@
 
 \begin{document}
 %
-\title{Ants-Review: an Ethereum-Based Protocol for Incentivized Peer Reviews}
+\title{Ants-Review: a Privacy-Oriented Protocol for Incentivized Open Peer-Reviews on Ethereum}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
@@ -33,7 +33,7 @@ Nazzareno Massari\inst{3,4}\orcidID{0000-0002-6638-2174}\thanks{The two authors 
 %
 \institute{Sorbonne Université, Faculté des Sciences et Ingénierie, Paris, France \and
 Atomic Energy and Alternative Energies Commission (CEA), Frédéric Joliot Institute for Life Sciences, NeuroSpin, Cognitive Neuroimaging Unit, Saclay, France
-\email{bianca.trovo@alumni.unitn.it}\\
+\email{bianca.trovo@protonmail.com}\\
 \and MakerDAO, Community Development, London, United Kingdom \\
 \email{nazzareno@nazzarenomassari.com}}
 %
@@ -146,12 +146,12 @@ In this paper we addressed a crucial problem within scholarly academic communica
 
 
 \subsubsection{Supplementary Material}
-Source code, DOI: 10.5281/zenodo.3971044;DApp: https://ants-review.on.fleek.co.
+Source code, DOI: 10.5281/zenodo.3971044; \\DApp: https://ants-review.on.fleek.co.
 
 \subsubsection{Declaration of Competing Interest}
 This work was mainly developed during the ETHTurin Hackathon 2020 and the Gitcoin Kernel Fellowship program 2020. These organizations, as well as the authors' affiliations, had no financial role in the design and implementation of the protocol.
 
-\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi, Andy Tudhope, Mark Beylin, Evan C. Harris and the four external anonymous peer reviewers for useful comments and revisions; Mitrasish Mukherjee for contributions on the interface.}
+\subsubsection{Acknowledgements} We would like to thank Andy Tudhope, Mark Beylin, Matteo A. Tambussi, Evan C. Harris and the four external anonymous peer reviewers for useful comments and revisions; the FDAPP 2020 workshop chairs and speakers for questions and feedback; Mitrasish Mukherjee for contributions on the interface.}
 
 
 % ---- Bibliography ----
